[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Main Menu.gd" type="Script" id=1]

[node name="Main Menu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PlayButton" type="Button" parent="."]
margin_left = 704.0
margin_top = 480.0
margin_right = 832.0
margin_bottom = 544.0
action_mode = 0
text = "Play Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateButton" type="Button" parent="."]
margin_left = 1088.0
margin_top = 480.0
margin_right = 1216.0
margin_bottom = 544.0
action_mode = 0
text = "Create Levels"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="CreateButton" to="." method="_on_CreateButton_pressed"]
